@@ -14,30 +14,29 @@
  * limitations under the License.
  */
 
-apply plugin: EhDeploy
+plugins {
+  id 'org.ehcache.build.deploy'
+}
 
 dependencies {
+  implementation "org.terracotta:statistics:$statisticVersion"
   // optional: if we want xml config
   compileOnly project(':xml')
 
   // optional: if we want to use the clustered management layer
   compileOnly project(':clustered:client')
   compileOnly "org.terracotta:entity-client-api:$terracottaApisVersion"
-  compileOnly "org.terracotta.management.dist:mnm-nms-agent:$terracottaPlatformVersion"
+  compileOnly ("org.terracotta.management:nms-agent-entity-client:$terracottaPlatformVersion") {
+    // This is to avoid stats lib being directly used.
+    exclude group:'org.terracotta', module:'statistics'
+  }
 
   compileOnly project(':api')
   compileOnly project(':core')
   compileOnly project(':impl')
-  testCompile ("org.terracotta.management:management-registry:$terracottaPlatformVersion") {
-    exclude group: 'org.terracotta', module: 'statistics'
-  }
-
-  testCompile project(':xml')
-  testCompile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
-}
-
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
+  testImplementation "org.terracotta.management:management-registry:$terracottaPlatformVersion"
+  testImplementation project(':xml')
+  testImplementation project(':impl')
+  testImplementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+  testImplementation testFixtures(project(':xml'))
 }
