@@ -15,28 +15,62 @@
  */
 
 plugins {
-  id 'org.unbroken-dome.xjc' version '1.1.3'
+  id 'org.unbroken-dome.xjc'
+  id 'org.ehcache.build.deploy'
+  id 'biz.aQute.bnd.builder'
+  id 'java-test-fixtures'
 }
-
-apply plugin: EhDeploy
 
 dependencies {
-  compile project(':api'), project(':core'), project(':impl')
+  api project(':api')
+  implementation project(':core')
+  implementation project(':impl')
+  providedImplementation "org.glassfish.jaxb:jaxb-runtime:$parent.jaxbVersion"
+
+  testFixturesApi 'org.xmlunit:xmlunit-core:2.6.0', 'org.xmlunit:xmlunit-matchers:2.6.0'
+  xjcClasspath 'org.jvnet.jaxb2_commons:jaxb2-fluent-api:3.0'
+  xjcClasspath 'org.jvnet.jaxb2_commons:jaxb2-basics-annotate:1.1.0'
 }
 
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
+configurations.xjcClasspath.resolutionStrategy.dependencySubstitution {
+  substitute module('commons-beanutils:commons-beanutils:1.9.3') with module('commons-beanutils:commons-beanutils:1.9.4')
+}
+
+jar {
+  bnd (
+    'Export-Package': 'org.ehcache.xml, org.ehcache.xml.exceptions, org.ehcache.xml.model',
+    'Import-Package': "javax.xml.bind*;version=\"${parent.jaxbVersion}\", *"
+  )
 }
 
 xjcGenerate {
-  source = fileTree('src/main/resources') { include '*.xsd' }
-  targetPackage = 'org.ehcache.xml.model'
+  source = ['src/main/resources/ehcache-core.xsd', 'src/main/resources/ehcache-multi.xsd']
   extension = true
+  extraArgs = ['-Xfluent-api', '-Xannotate']
 }
 
-tasks.withType(JavaCompile) {
-  // We can't check for unchecked errors because of XJC that produces them
-  options.compilerArgs = ['-Werror', '-Xlint:deprecation']
+configurations {
+  lowerBoundTestRuntime.extendsFrom testRuntimeClasspath
+}
+configurations {
+  lowerBoundTestRuntime {
+    resolutionStrategy.dependencySubstitution {
+      substitute module('org.glassfish.jaxb:jaxb-runtime') with module('com.sun.xml.bind:jaxb-impl:2.2.8-b01')
+    }
+  }
+}
+dependencies {
+  lowerBoundTestRuntime 'com.sun.activation:javax.activation:1.2.0'
+}
+
+tasks.register('lowerBoundTest', Test) {
+  group = JavaBasePlugin.VERIFICATION_GROUP
+  //remove the original runtime classpath
+  classpath -= configurations.testRuntimeClasspath
+  //add the classpath we want
+  classpath += configurations.lowerBoundTestRuntime
+}
+
+tasks.named('check') {
+  dependsOn tasks.lowerBoundTest
 }
